# g1_3d_nav

./: .gitignore  CONTEXT.md  DEPLOYMENT_PLAN.md  Dockerfile  README.md  README_ROS2.md  entrypoint.sh  install_deps.sh
config/: g1_navigation.rviz
config/ros2/: fastrtps_docker.xml  loc_param_g1.yaml  nav2_params.yaml  network_bridge_g1.yaml  network_bridge_leo.yaml  open3d_loc_g1.launch.py
configs/: g1_navigation_rviz2.rviz
docs/: BUILD.md  DEEP_RESEARCH_TRACK2_TRACK3.md  PRD_TRACK1A.md  ROS1_BRIDGE_SOLUTION.md
g1_control/: cmd_vel_to_sdk2.py  g1_base_controller.py  map_publisher.py  waypoint_manager.py
grid_accumulator/: CMakeLists.txt  package.xml
grid_accumulator/src/: ground_cloud_accumulator.cpp.bak
maps/: accumulated_grid.yaml
ros1_ros2_bridge/: bridge_and_control.py  bridge_sender.py
ros2_ws/src/demo_python_topic/: package.xml  setup.py
ros2_ws/src/demo_python_topic/demo_python_topic/: novel_topic.py  speaking.py
ros2_ws/src/ros2_classes/: package.xml  setup.cfg  setup.py
ros2_ws/src/ros2_classes/ros2_classes/: mult_thread_load.py
ros2_ws/src/ros2_classes/scripts/: the_first_pub_node.py
ros2_ws/src/status_display/: CMakeLists.txt  package.xml
ros2_ws/src/status_display/src/: qt.cpp  sys_status_display.cpp
ros2_ws/src/status_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/status_interfaces/msg/: SystemStatus.msg
ros2_ws/src/status_publisher/: package.xml  setup.py
ros2_ws/src/status_publisher/status_publisher/: sys_status_pub.py
scripts/: bridge_and_control.py  build.sh  run.sh  start_hongtu.sh  start_loc.sh  start_mapping.sh  stop_loc.sh
scripts/ros1/: start_nav.sh  start_nav_host.sh
scripts/ros2/: start_all.sh  start_ros1_bridge.sh  start_ros2_nav.sh
src/: CMakeLists.txt
src/deepglint/FAST_LIO/PCD/: README.md
src/deepglint/FAST_LIO/launch/: mapping_g1_full.launch  mapping_mid360_g1.launch
src/deepglint/livox_ros_driver2/: CMakeLists.txt
src/deepglint/open3d_loc/: CMakeLists.txt
src/deepglint/open3d_loc/launch/: open3d_loc_g1.launch
src/deepglint/open3d_loc/rviz_cfg/: loc_map_cur.rviz
src/grid_accumulator/: CMakeLists.txt
src/grid_accumulator/src/: ground_cloud_accumulator.cpp
src/livox_ws/src/: package.xml
src/navigation/param/: costmap_g1.yaml  move_base_params.yaml  teb_g1.yaml  teb_local_planner_params.yaml
src/ros1/FAST_LIO/: README.md
src/ros1_ros2_bridge/: bridge_receiver.py
src/ros1_ws_src/localization/: FAST_LIO  open3d_loc
src/ros1_ws_src/sensors/: livox_ros_driver2
src/ros1_ws_src/tools/grid_accumulator/: CMakeLists.txt  package.xml
src/ros1_ws_src/tools/grid_accumulator/src/: grid_accumulator_node.cpp
src/ros1_ws_src/tools/pointcloud_to_grid/: CMakeLists.txt
src/ros1_ws_src/tools/pointcloud_to_grid/src/: pointcloud_to_grid_node.cpp
src/ros2/open3d_loc/: CMakeLists.txt
src/ros_map_edit/launch/: map_edit.launch
src/tools/tool/: CMakeLists.txt.bak3
track1a/: Dockerfile  entrypoint.sh  start_hongtu.sh
(+12 files in other folders)
