cmake_minimum_required(VERSION 3.0.2)
project(grid_accumulator)
add_compile_options(-std=c++17 -O3)
find_package(PCL REQUIRED)
find_package(catkin REQUIRED COMPONENTS roscpp sensor_msgs nav_msgs tf2 tf2_ros)
catkin_package()
include_directories(${catkin_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(ground_cloud_accumulator src/ground_cloud_accumulator.cpp)
target_link_libraries(ground_cloud_accumulator ${catkin_LIBRARIES} ${PCL_LIBRARIES})
install(TARGETS ground_cloud_accumulator RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
