cmake_minimum_required(VERSION 3.0.2)
project(pointcloud_to_grid)
add_compile_options(-std=c++17 -O3)
find_package(PCL REQUIRED)
find_package(catkin REQUIRED COMPONENTS sensor_msgs nav_msgs pcl_ros roscpp)
catkin_package()
include_directories(include ${catkin_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pointcloud_to_grid_node src/pointcloud_to_grid_node.cpp)
target_link_libraries(pointcloud_to_grid_node ${catkin_LIBRARIES} ${PCL_LIBRARIES})
